# node-indri

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.js  nodesource_setup.sh  package-lock.json  package.json
benchmark/: bench-node-indri.js  bench-pyndri.py
etc/: poems
etc/poems_index/: manifest
etc/poems_index/collection/: forwardLookup0  lookup  reverseLookup0  storage
etc/poems_index/index/0/: directFile  documentLengths  documentStatistics  infrequentID  infrequentString  invertedFile  manifest
src/: app.js  example.js  indri.cc  indri.cpp  reader.cc  reader.h  scorer.cc  scorer.h  searcher.cc  searcher.h
test/: indri.test.js
